Fix grid alignment

--- a/src/app/Components/EventDetails.css
+++ b/src/app/Components/EventDetails.css
@@ -56,7 +56,7 @@
 }
 
 .flyer{
-    width: 25vw;
+    width: 26vw;
 }
 
 .flyer img{
